# bril-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
brench/: dce.toml  dce_result.csv  lvn.toml  lvn_result.csv
include/: buildBlocks.h  buildCFG.h  config.h  deadCodeElimination.h  instr2str.h  localValueNumbering.h
include/common/: common.h  logger.h
include/optimization/: deadCodeElimination.h  localValueNumbering.h
include/preprocess/: buildCFG.h  buildDataFlowInfo.h
src/: buildBlocks.cpp  buildBlocksMain.cpp  buildCFG.cpp  buildCFGMain.cpp  common.cpp  config.cpp  deadCodeElimination.cpp  deadCodeEliminationMain.cpp  instr2str.cpp  localValueNumbering.cpp  localValueNumberingMain.cpp  logger.cpp
src/common/: common.cpp  config.cpp  instr2str.cpp  logger.cpp
src/driver/: buildBlocksMain.cpp  buildCFGMain.cpp  buildDataFlowInfoMain.cpp  deadCodeEliminationMain.cpp  localValueNumberingMain.cpp
src/optimization/: deadCodeElimination.cpp  localValueNumbering.cpp
src/preprocess/: buildBlocks.cpp  buildCFG.cpp  buildDataFlowInfo.cpp
test/: condition_bb.bril  condition_cfg.bril
test/core/: skipped.bril
test/data_flow/: dom.bril  liveout.bril  uninit.bril
test/dce/: dce_test.bril  lvn_dce.out  lvn_dce_test.bril  only_dce.out
test/lvn/: commutative.bril  cse.bril  cse_out.bril  fold_logical.bril  invalid_example.bril  lvn_test.bril  primes.json  primes_between.bril  primes_between_out.bril
